fixing the alignment of the h1 h2 & h3 tags of the title slide (useR theme)

--- a/inst/rmarkdown/templates/xaringan/resources/useR.css
+++ b/inst/rmarkdown/templates/xaringan/resources/useR.css
@@ -12,8 +12,9 @@
 
 .title-slide {
   background-image: url("https://www.r-project.org/conferences/useR.png"), linear-gradient(to bottom, rgba(227, 227, 227) 100%, rgba(227, 227, 227) 100%), linear-gradient(to bottom, white 85%, rgba(227, 227, 227) 95%);
-  background-position: 5% 5%;
-  background-size: 250px;
+  background-position: 1% 1%;
+  background-size: 200px;
+
 }
 
 .title-slide h1 {
